make sure openfiles tree scrollbar on windows doesn't add double padding

--- a/openfiles.css
+++ b/openfiles.css
@@ -60,7 +60,7 @@
     border-top : 1px solid @border-highlight;
     border-bottom : 1px solid @border-highlight-dark-medium;
     box-sizing : border-box;
-    padding : 10px 10px 0 0;
+    padding : 10px 0 0 0;
 }
 
 .openfiles>.filetree{
